# context-engineering-faster

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  docker-compose.yml  ideas.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  integration-nightly.yml  nightly.yml  release-desktop.yml
client/: index.html
client/src/: App.tsx  i18n.ts  index.css  main.tsx  router.tsx
context-engine/: Cargo.toml
context-engine/pkg/: context_engine_bg.wasm  package.json
context-engine/src/: lib.rs
docs/: README.md  Rust+TypeScript 全面替换技术栈（不改UI与功能）.md  上下文工程项目现状分析与修复计划.md  生产级升级分析与Docker化改造计划.md
docs/产品地图/: 功能地图与北极星流程.md
docs/技术选型/: Milvus REST v2 连接器落地要点.md  Milvus 连接器选型.md  (+3 more)
scripts/: prepare-tauri-sidecar.ts  smoke-server.ts  verify-wasm-sync.ts
server-rs/: Cargo.toml
server-rs/src/: crypto.rs  lib.rs  main.rs  resolvers.rs  runs.rs  variable_library.rs  vector_store.rs
server-rs/src/connectors/: milvus.rs  mod.rs  neo4j.rs  sql.rs
server-rs/tests/: dataset_replay.rs  datasets_jobs.rs  datasource_capabilities_contract.rs  datasource_crud_and_columns.rs  datasource_permissions_enforced.rs  datasources_sql_query.rs  execute_trace.rs  import_csv_sqlite.rs  milvus_contract.rs  milvus_feature_gate.rs  neo4j_feature_gate.rs  nightly_external_integrations.rs  preview_execute.rs  projects_roundtrip.rs  providers_crud.rs  security_and_limits.rs  session_render.rs  sessions_list_summary.rs  sql_any_integration.rs  sql_preview_any_integration.rs  sql_preview_rows.rs  sql_query_sqlite.rs  static_spa.rs  variable_library_crud.rs  vector_store.rs
shared/: project.ts  trace.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
(+96 files in other folders)
