[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
context-engine = { path = "../context-engine" }
flate2 = "1"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["any", "runtime-tokio", "mysql", "postgres", "sqlite", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "fs", "normalize-path", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
neo4rs = { version = "0.8.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
base64 = "0.22"
bytes = "1"
csv = "1"

[features]
neo4j = ["dep:neo4rs"]
milvus = []

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
